# physics-os

./: .execution_summary.txt  .gitattributes  .github_validation_summary.txt  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .zenodo.json  AGENT_CONTEXT.md  ARCHITECTURE.md  AUDIT_EXECUTION_TRACKER.md  BEAST_MODE_FINAL_REPORT.md  BLACK_SWAN_FINDINGS.md  BOUNTY_BATTLE_PLAN.md  CAIRO_CIRCUIT_VULNERABILITY_REPORT.md  CAPABILITY_AUDIT.md  CERTIFICATE_TEST_MATRIX.md  CHANGELOG.md  CHRONOS_ATTESTATION.json  CITATION.cff  CIVILIZATION_STACK_PHASE_II.md  CIVILIZATION_STACK_PHASE_III_YM.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMIT_CHECKLIST.md  CONSTITUTION.md  CONTRIBUTING.md  CORNUCOPIA_ATTESTATION.json  CROSS_PRIMITIVE_PIPELINE_ATTESTATION.json  Cargo.toml  Commercial_Execution.md  Containerfile  DECISION_LOG.md  DETERMINISM_ENVELOPE.md  EXECUTION_PLAN_140_140.md  EXECUTION_TRACKER.md  EXPERIMENT_LOG.md  FEMTO_FABRICATOR_ATTESTATION.json  FEZK_README.md  FEZK_V2_ATTESTATION.json  FLUIDELITE_FUTURE_ENHANCEMENTS.md  (+218 more)
QTT-FEA/fea-qtt/: ATTESTATION.json  Cargo.toml
QTT-FEA/fea-qtt/src/: material.rs:Zone.Identifier  mesh.rs  q16.rs  solver.rs
QTT-FEA/fea-qtt/tests/: integration.rs
QTT-OPT/opt-qtt/: Cargo.toml  Cargo.toml:Zone.Identifier  README.md  opt_validation_report.json
QTT-OPT/opt-qtt/src/: adjoint.rs  q16.rs  topology.rs
QTeneT/QTeneT/: CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
QTeneT/QTeneT/docs/: 01_VISION.md  02_TAXONOMY.md  03_REFERENCE_ARCHITECTURE.md  05_ALGORITHM_CATALOG.md  06_SOURCE_INVENTORY.md  07_GLOSSARY.md  08_ROADMAP.md  10_CLI_CONTRACT.md  13_PHASED_ROADMAP_CHECKLIST.md  14_TAXONOMY_TRIAGE_OTHER.md
QTeneT/QTeneT/tools/: generate_canonicalization.py  generate_capability_cards.py  generate_capability_map.py
apps/glass_cockpit/: Cargo.toml  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  README.md  The_Big_One.md
apps/glass_cockpit/src/: bridge.rs  bridge_heatmap_renderer.rs  convergence.rs  convergence_renderer.rs  event_log.rs  ghost_plane.rs  glass_chrome.rs  globe.rs  globe_quadtree.rs  grayscale_bridge_renderer.rs  grib_decoder.rs  injection_buffer.rs  interaction.rs  layout.rs  lod.rs  main.rs  main_phase3.rs  main_phase4.rs  main_phase5.rs  main_phase6.rs  main_phase7.rs  noaa_fetcher.rs  particle_system.rs  probe_panel.rs  ram_bridge_v2.rs  renderer.rs  satellite_texture.rs  starfield.rs  streamlines.rs  swarm_renderer.rs  system_metrics.rs  telemetry_rail.rs  tensor_colormap.rs  tensor_renderer.rs  terminal_renderer.rs  text.rs  tile_fetcher.rs  tile_texture_array.rs  timeline_scrubber.rs  tube_geometry.rs  (+3 more)
apps/global_eye/: Cargo.toml
apps/golden_demo/: Cargo.toml
apps/trustless_verify/: Cargo.toml  explorer.html
apps/vlasov_proof/: Cargo.toml
crates/fluidelite_circuits/: Cargo.toml
crates/fluidelite_core/: Cargo.toml
crates/fluidelite_infra/: Cargo.toml
crates/fluidelite_zk/: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  Dockerfile.vastai  FLUIDELITE_ZK_V3_ROADMAP.md  FluidEliteZK_FINDINGS.md  GEVULOT_DEPLOYMENT.md  GPU_ACCELERATION.md  Makefile  README.md  VASTAI_DEPLOYMENT.md  WORLDCOIN_PRODUCTION_README.md  ZK_NETWORK_BENCHMARK_COMPARISON.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  prometheus.yml  proof.ots  proof.ots.b64  proof_attestation.json  proof_attestation.json.ots.pending  pyproject.toml  start-production.sh  task.yaml  tenderly_simulate.sh  test-local.sh  zenith_launch.sh
crates/hyper_bridge/: Cargo.toml
crates/hyper_core/: Cargo.toml
crates/hyper_gpu_py/: Cargo.toml  pyproject.toml
crates/ontic_bridge/: Cargo.toml
crates/ontic_gpu_py/: Cargo.toml  pyproject.toml
crates/proof_bridge/: Cargo.toml
crates/qtt_cem/: ATTESTATION.json  Cargo.toml  README.md  cem_validation_report.json  validate.py
crates/tci_core/: Cargo.toml  pyproject.toml
crates/tci_core_rust/: Cargo.toml  pyproject.toml
fluidelite-zk/: Cargo.toml  Dockerfile  FEZK_AUDIT.md  GEVULOT_DEPLOYMENT.md  README.md  VASTAI_DEPLOYMENT.md  WORKFLOW_ARCHITECTURE.md  WORLDCOIN_PRODUCTION_README.md  build-gevulot.sh  ops_config.json  task.yaml  vk.json  zenith_launch.sh
fluidelite-zk/benches/: constraint_bench.rs
fluidelite-zk/contracts/: WorldcoinZeroExpansion.sol  ZeroExpansionSemaphoreVerifier.sol
fluidelite-zk/data/: fluidelite_v2_prod_zk_weights.json
fluidelite-zk/examples/: 18tb_demo.cast  noaa_goes18_1tb.qtt
fluidelite-zk/foundry/: foundry.toml
fluidelite-zk/output/: proof_output.json
fluidelite-zk/scripts/: run-gpu.sh  vast_setup.sh
fluidelite-zk/src/: certificate_render.rs  cuda_memory_pool.rs  field.rs  gpu_halo2_prover.rs  groth16_output.rs  groth16_prover.rs  halo2_hybrid_prover.rs  hybrid.rs  hybrid_prover.rs  lib.rs  mps.rs  multi_timestep.rs  ops.rs  params.rs  prover.rs  python.rs  qtt_ga.rs  qtt_native_msm.rs  qtt_rkhs.rs  server.rs  trustless_api.rs  verifier.rs  weight_crypto.rs  weights.rs  zero_expansion_prover.rs  zero_expansion_prover_v3.rs
glass-cockpit/: Cargo.toml  README.md
glass-cockpit/src/: affinity.rs  bridge.rs  bridge_heatmap_renderer.rs  camera.rs  convergence.rs  convergence_renderer.rs  globe.rs  grayscale_bridge_renderer.rs  grib_decoder.rs  grid_renderer.rs  hud_overlay.rs  layout.rs  lod.rs  main.rs  main_phase3.rs  main_phase5.rs  main_phase6.rs  main_phase7.rs  noaa_fetcher.rs  overlay.rs  particle_system.rs  probe_panel.rs  ram_bridge_v2.rs  renderer.rs  starfield.rs  streamlines.rs  telemetry.rs  telemetry_rail.rs  tensor_colormap.rs  tensor_field.rs  tensor_renderer.rs  terminal_renderer.rs  text.rs  text_gpu.rs  tile_fetcher.rs  timeline_scrubber.rs  vector_field.rs  verification.rs  vorticity_ghost.rs  vorticity_renderer.rs  (+1 more)
glass-cockpit/ui_source_reference/: layout.rs
hypertensor-physics/: README.md  pyproject.toml  validate.py
hypertensor-physics/examples/: __init__.py  gallery.py
hypertensor-physics/hypertensor/: __init__.py
hypertensor-physics/tests/: __init__.py  test_physics.py
pwa_engine/: __init__.py  cli.py  pyproject.toml
tci_llm/: LICENSE  __init__.py  demo.py  pyproject.toml
(+6075 files in other folders)
