# ═══════════════════════════════════════════════════════════════════════════════
#                         HYPERTENSOR WORKSPACE
#                    Tensor-Compressed Physics at Scale
# ═══════════════════════════════════════════════════════════════════════════════
#
# Architecture:
#   crates/hyper_core     - Physics engine core (QTT, MPO, CFD operators)
#   crates/hyper_bridge   - RAM bridge IPC protocol (Python ↔ Rust streaming)
#   crates/proof_bridge   - Trustless Physics: trace → ZK proof pipeline
#   apps/glass_cockpit    - Fighter jet cockpit visualization
#   apps/global_eye       - Global weather observation platform
#   apps/trustless_verify - Standalone TPC certificate verifier
#   QTT-CEM/QTT-CEM      - CEM-QTT: Maxwell FDTD solver (Q16.16 + MPS/MPO)
#   QTT-FEA/fea-qtt       - FEA-QTT: Hex8 static elasticity solver (Q16.16 + CG)
#   QTT-OPT/opt-qtt       - OPT-QTT: SIMP topology optimization + inverse problems (Q16.16 + adjoint)
#
# Build: cargo build --workspace --release
# Test:  cargo test --workspace
# ═══════════════════════════════════════════════════════════════════════════════

[workspace]
members = [
    "crates/hyper_core",
    "crates/hyper_bridge",
    "crates/tci_core",
    "crates/hyper_gpu_py",
    "crates/proof_bridge",
    "apps/glass_cockpit",
    "apps/global_eye",
    "apps/trustless_verify",
    "apps/golden_demo",
    "fluidelite-core",
    "fluidelite-circuits",
    "fluidelite-zk",
    "fluidelite-infra",
    "QTT-CEM/QTT-CEM",
    "QTT-FEA/fea-qtt",
    "QTT-OPT/opt-qtt",
]
resolver = "2"

# ─────────────────────────────────────────────────────────────────────────────
# Workspace-wide dependencies (inherited by members)
# ─────────────────────────────────────────────────────────────────────────────
[workspace.dependencies]
# Shared Memory IPC
memmap2 = "0.9"
shared_memory = "0.12"

# Serialization
bytemuck = { version = "1.14", features = ["derive"] }
crc = "3.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Async Runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "fs"] }

# Graphics (apps only)
wgpu = "0.19"
winit = "0.29"
glam = { version = "0.25", features = ["bytemuck"] }

# ─────────────────────────────────────────────────────────────────────────────
# Release Profile: Maximum Performance
# ─────────────────────────────────────────────────────────────────────────────
[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
strip = true

[profile.release-fat]
inherits = "release"
lto = "fat"

[profile.dev]
opt-level = 0       # No optimization → much less RAM during codegen
debug = 0           # No debuginfo → linker uses far less RAM
codegen-units = 256 # Max split → lowest per-unit RAM peak
split-debuginfo = "off"
lto = false          # Explicitly disable LTO for dev builds
incremental = true   # Smaller incremental artifacts vs monolithic

[profile.test]
opt-level = 0
debug = 0
codegen-units = 256
split-debuginfo = "off"
lto = false
incremental = true

[profile.bench]
inherits = "release"
