# ═══════════════════════════════════════════════════════════════════════════════
#                       THE PHYSICS OS — RUST WORKSPACE
#               Powered by The Ontic Engine · Tigantic Holdings LLC
#  Version: 4.0.1
# ═══════════════════════════════════════════════════════════════════════════════
#
# Architecture:
#   crates/ontic_core         - Ontic Engine core (QTT, MPO, CFD operators)
#   crates/ontic_bridge       - Ontic Bridge IPC protocol (Python ↔ Rust streaming)
#   crates/proof_bridge       - Trustless Physics: trace → ZK proof pipeline
#   crates/fluidelite_core    - FluidElite core engine
#   crates/fluidelite_circuits- FluidElite ZK circuit layer
#   crates/fluidelite_zk      - FluidElite ZK proving
#   crates/fluidelite_infra   - FluidElite infrastructure utilities
#   crates/qtt_cem            - CEM-QTT: Maxwell FDTD solver (Q16.16 + MPS/MPO)
#   crates/qtt_fea            - FEA-QTT: Hex8 static elasticity solver (Q16.16 + CG)
#   crates/qtt_opt            - OPT-QTT: SIMP topology optimization (Q16.16 + adjoint)
#   crates/tci_core_rust      - TCI core Rust implementation
#   apps/glass_cockpit        - Fighter jet cockpit visualization
#   apps/global_eye           - Global weather observation platform
#   apps/trustless_verify     - Standalone TPC certificate verifier
#
# Build: cargo build --workspace --release
# Test:  cargo test --workspace
# ═══════════════════════════════════════════════════════════════════════════════

[workspace]
members = [
    # ── Core engine crates ──────────────────────────────────────────────
    "crates/ontic_core",
    "crates/ontic_bridge",
    "crates/ontic_gpu_py",
    "crates/tci_core",
    "crates/proof_bridge",

    # ── FluidElite family ───────────────────────────────────────────────
    "crates/fluidelite_core",
    "crates/fluidelite_circuits",
    "crates/fluidelite_zk",
    "crates/fluidelite_infra",

    # ── QTT solvers ─────────────────────────────────────────────────────
    "crates/qtt_cem",
    "crates/qtt_fea",
    "crates/qtt_opt",

    # ── Applications ────────────────────────────────────────────────────
    "apps/glass_cockpit",
    "apps/global_eye",
    "apps/golden_demo",
    "apps/trustless_verify",
    "apps/vlasov_proof",

    # ── Test harnesses ──────────────────────────────────────────────────
    "tests/integration_suite",
    # ── PyO3 extension module ─────────────────────────────────────────────────
    "crates/tci_core_rust",]
exclude = [
    "crates/proof_bridge/fuzz",
]
resolver = "2"

# ─────────────────────────────────────────────────────────────────────────────
# Workspace-wide dependencies (inherited by members)
# ─────────────────────────────────────────────────────────────────────────────
[workspace.dependencies]
# Shared Memory IPC
memmap2 = "0.9"
shared_memory = "0.12"

# Serialization
bytemuck = { version = "1.14", features = ["derive"] }
crc = "3.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Async Runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "fs"] }

# Graphics (apps only)
wgpu = "0.19"
winit = "0.29"
glam = { version = "0.32", features = ["bytemuck"] }

# ─────────────────────────────────────────────────────────────────────────────
# Release Profile: Maximum Performance
# ─────────────────────────────────────────────────────────────────────────────
[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
strip = true

[profile.release-fat]
inherits = "release"
lto = "fat"

[profile.dev]
opt-level = 0       # No optimization → much less RAM during codegen
debug = 0           # No debuginfo → linker uses far less RAM
codegen-units = 256 # Max split → lowest per-unit RAM peak
split-debuginfo = "off"
lto = false          # Explicitly disable LTO for dev builds
incremental = true   # Smaller incremental artifacts vs monolithic

[profile.test]
opt-level = 0
debug = 0
codegen-units = 256
split-debuginfo = "off"
lto = false
incremental = true

[profile.bench]
inherits = "release"
