[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensornet"
version = "0.1.0"
description = "Quantum-inspired tensor networks for real-time computational physics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "TiganticLabz", email = "dev@tigantic.com"}
]
keywords = [
    "tensor-networks",
    "matrix-product-states",
    "dmrg",
    "quantum-inspired",
    "computational-physics",
    "pytorch"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "bandit>=1.7",
    "detect-secrets>=1.4",
    "twine>=5.0",
    "build>=1.0",
    "pdoc>=14.0",
    "pre-commit>=3.0",
]
viz = [
    "matplotlib>=3.7",
    "jupyter>=1.0",
]
benchmark = [
    "tenpy>=0.10",
    "scipy>=1.10",
]
all = [
    "tensornet[dev,viz,benchmark]",
]

[project.urls]
Homepage = "https://github.com/tigantic/HyperTensor"
Documentation = "https://github.com/tigantic/HyperTensor#readme"
Repository = "https://github.com/tigantic/HyperTensor.git"
Issues = "https://github.com/tigantic/HyperTensor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tensornet*"]

[tool.pytest.ini_options]
testpaths = ["tests", "Physics/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = "-v --tb=short -m 'not integration and not slow'"
markers = [
    "unit: mark test as a unit test (fast, isolated)",
    "integration: mark test as an integration test (may be slow)",
    "slow: mark test as slow (>5 seconds)",
    "physics: mark test as a physics validation test",
    "gpu: mark test as requiring GPU",
    "rust: mark test as requiring Rust TCI extension",
    "security: mark test as a security validation test",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit security
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "S101",   # assert usage (allowed in tests)
    "S311",   # pseudo-random generators (allowed for non-crypto)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts OK in tests
"benchmarks/**/*.py" = ["S101"]
"proofs/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["tensornet"]

# Security: Flag pickle usage as warning
[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.coverage.run]
source = ["tensornet"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
# Fail if coverage drops below threshold
fail_under = 70
show_missing = true
skip_covered = true
