[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensornet"
version = "40.0.1"
description = "The Physics OS — Powered by The Ontic Engine | ~2M LOC, 168 physics taxonomy nodes, 20 domain packs | Tigantic Holdings LLC, DBA HolonomiX"
readme = "README.md"
license = {text = "Proprietary - Tigantic Holdings LLC"}
requires-python = ">=3.11"
authors = [
    {name = "TiganticLabz", email = "dev@tigantic.com"}
]
keywords = [
    "tensor-networks",
    "matrix-product-states",
    "qtt",
    "dmrg",
    "quantum-inspired",
    "computational-physics",
    "cfd",
    "navier-stokes",
    "zero-knowledge",
    "formal-verification",
    "pytorch",
    "rust"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

# ---------------------------------------------------------------------------
# Feature flags — pip install tensornet[cfd,quantum] etc.
# ---------------------------------------------------------------------------
[project.optional-dependencies]

# Domain packs —————————————————————————————————————————————————————
cfd = [
    "scipy>=1.10.0",
    "h5py>=3.8",
    "matplotlib>=3.7",
]
quantum = [
    "scipy>=1.10.0",
]
fluids = [
    "scipy>=1.10.0",
    "h5py>=3.8",
]
materials = [
    "scipy>=1.10.0",
]
aerospace = [
    "scipy>=1.10.0",
    "h5py>=3.8",
]
astro = [
    "scipy>=1.10.0",
    "h5py>=3.8",
]
plasma = [
    "scipy>=1.10.0",
]
ml = [
    "scipy>=1.10.0",
]
em = [
    "scipy>=1.10.0",
]

# Aggregate domain extras
physics-all = [
    "tensornet[cfd,quantum,fluids,materials,aerospace,astro,plasma,ml,em]",
]

# Tooling ——————————————————————————————————————————————————————————
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "pytest-xdist>=3.5",
    "ruff>=0.8.0",
    "mypy>=1.10",
    "bandit>=1.7",
    "detect-secrets>=1.4",
    "twine>=5.0",
    "build>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]
viz = [
    "matplotlib>=3.7",
    "jupyter>=1.0",
]
io = [
    "h5py>=3.8",
]
benchmark = [
    "tenpy>=0.10",
    "scipy>=1.10",
    "pytest-benchmark>=5.0",
]

# Everything
all = [
    "tensornet[dev,docs,viz,io,benchmark,physics-all]",
]

[project.urls]
Homepage = "https://github.com/tigantic/HyperTensor-VM"
Documentation = "https://tigantic.github.io/HyperTensor-VM"
Repository = "https://github.com/tigantic/HyperTensor-VM.git"
Issues = "https://github.com/tigantic/HyperTensor-VM/issues"
Changelog = "https://github.com/tigantic/HyperTensor-VM/blob/main/CHANGELOG.md"

[project.scripts]
tensornet = "tensornet.platform.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tensornet*", "hypertensor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = "-v --tb=short -m 'not integration and not slow'"
markers = [
    "unit: mark test as a unit test (fast, isolated)",
    "integration: mark test as an integration test (may be slow)",
    "slow: mark test as slow (>5 seconds)",
    "physics: mark test as a physics validation test",
    "gpu: mark test as requiring GPU",
    "rust: mark test as requiring Rust TCI extension",
    "security: mark test as a security validation test",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit security
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "S101",   # assert usage (allowed in tests)
    "S311",   # pseudo-random generators (allowed for non-crypto)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts OK in tests
"proofs/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["tensornet", "hypertensor"]

# Security: Flag pickle usage as warning
[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.coverage.run]
source = ["tensornet"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
# Fail if coverage drops below threshold
fail_under = 70
show_missing = true
skip_covered = true
