[package]
name = "fluidelite-zk"
version = "0.1.0"
edition = "2021"
rust-version = "1.73.0"
authors = ["TiganticLabz"]
description = "ZK-provable FluidElite inference using Halo2"
license = "MIT"
repository = "https://github.com/TiganticLabz/HyperTensor-VM"
keywords = ["zk", "halo2", "tensor-network", "machine-learning", "verifiable-ai"]
categories = ["cryptography", "science"]

[lib]
name = "fluidelite_zk"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "prover-node"
path = "src/bin/prover_node.rs"
required-features = ["halo2"]

[[bin]]
name = "fluidelite-cli"
path = "src/bin/cli.rs"
required-features = ["halo2"]

[[bin]]
name = "fluidelite-server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "gpu-test"
path = "src/bin/gpu_test.rs"
required-features = ["gpu"]

[[bin]]
name = "qtt-zero-expansion"
path = "src/bin/qtt_zero_expansion.rs"
required-features = ["gpu"]

[[bin]]
name = "test-hybrid-zk"
path = "src/bin/test_hybrid_zk.rs"

[[bin]]
name = "test-halo2-hybrid"
path = "src/bin/test_halo2_hybrid.rs"
required-features = ["halo2"]

[[bin]]
name = "test-batched-hybrid"
path = "src/bin/test_batched_hybrid.rs"
required-features = ["halo2"]

[[bin]]
name = "gevulot-prover"
path = "src/bin/gevulot_prover.rs"
required-features = ["halo2"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.21"

# Numerics (fixed-point for ZK)
fixed = "1.23"
num-traits = "0.2"

# Hashing for lookup table
sha2 = "0.10"

# Async runtime for prover node
tokio = { version = "1.35", features = ["full"] }

# HTTP server for REST API
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit"], optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Random (for testing/benchmarks only)
rand = "0.8"

# Python bindings (fixed RUSTSEC-2025-0020 buffer overflow)
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

# Halo2 ZK proving system (Axiom's maintained fork with KZG)
halo2-axiom = { version = "0.5.1", optional = true }

# Hex encoding for proofs
hex = "0.4"

# GPU acceleration (Icicle v4 - Ingonyama)
# Latest from GitHub with full BN254 support for MSM/NTT
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v4.0.0", optional = true }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v4.0.0", optional = true }
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v4.0.0", optional = true }

# Constant-time comparison for security-sensitive operations
subtle = "2.5"

# Encryption for enterprise weight protection (AES-256-GCM)
aes-gcm = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }
# sha2 already defined above, reuse it for encryption feature
getrandom = { version = "0.2", optional = true }

# DHAT heap profiler (optional, for stress testing)
dhat = { version = "0.3", optional = true }

# Rayon for CPU parallelism
rayon = "1.8"

# sysinfo for memory monitoring in stress tests
sysinfo = "0.30"

# AWS SDK for S3 byte-range streaming
aws-config = { version = "1.5", optional = true }
aws-sdk-s3 = { version = "1.65", optional = true }

# Zstd compression for residual hybrid protocol
zstd = { version = "0.13", optional = true }

# Chrono for timestamps
chrono = { version = "0.4", optional = true }

# libc for mmap (Unix)
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "constraint_bench"
harness = false

[[bench]]
name = "proof_bench"
harness = false

[[bin]]
name = "vram-stress-test"
path = "src/bin/vram_stress_test.rs"
required-features = ["halo2"]

[[bin]]
name = "gpu-stress-test"
path = "src/bin/gpu_stress_test.rs"
required-features = ["gpu"]

[[bin]]
name = "gpu-sustained-bench"
path = "src/bin/gpu_sustained_bench.rs"
required-features = ["gpu"]

[[bin]]
name = "gpu-max-stress"
path = "src/bin/gpu_max_stress.rs"
required-features = ["gpu"]

[[bin]]
name = "gpu-vram-stress"
path = "src/bin/gpu_vram_stress.rs"
required-features = ["gpu"]

[[bin]]
name = "gpu-realworld-tps"
path = "src/bin/gpu_realworld_tps.rs"
required-features = ["gpu"]

[[bin]]
name = "gpu-production-tps"
path = "src/bin/gpu_production_tps.rs"
required-features = ["gpu"]

[[bin]]
name = "gpu-optimized-tps"
path = "src/bin/gpu_optimized_tps.rs"
required-features = ["gpu"]

[[bin]]
name = "gpu-pipelined-tps"
path = "src/bin/gpu_pipelined_tps.rs"
required-features = ["gpu"]

[[bin]]
name = "gpu-halo2-benchmark"
path = "src/bin/gpu_halo2_benchmark.rs"
required-features = ["gpu"]

[[bin]]
name = "k-ladder-stress"
path = "src/bin/k_ladder_stress.rs"
required-features = ["gpu"]

[[bin]]
name = "single-var-test"
path = "src/bin/single_var_test.rs"
required-features = ["gpu"]

[[bin]]
name = "fluid-ingest"
path = "src/bin/fluid_ingest.rs"
required-features = ["s3"]

[[bin]]
name = "fluid-s3-native"
path = "src/bin/fluid_s3_native.rs"
required-features = ["s3"]

[[bin]]
name = "fluid-block"
path = "src/bin/fluid_block.rs"
required-features = ["s3"]

[features]
default = []
# Enable Halo2 ZK circuit - requires nightly Rust
halo2 = ["dep:halo2-axiom"]
# Enable Python bindings
python = ["dep:pyo3", "halo2"]
# Enable REST API server
server = ["dep:axum", "dep:tower", "dep:tower-http", "halo2"]
# Enable GPU acceleration via Icicle (requires CUDA 12+)
gpu = ["dep:icicle-runtime", "dep:icicle-core", "dep:icicle-bn254", "halo2"]
# Enable weight encryption for enterprise IP protection (sha2 always available)
encryption = ["dep:aes-gcm", "dep:hkdf", "dep:getrandom"]
# Enable DHAT heap profiling for stress tests
dhat-heap = ["dep:dhat"]
# Full production build with hardening (metrics built-in, no external deps)
production = ["halo2", "server"]
# Full production with GPU acceleration
production-gpu = ["production", "gpu"]
# Enterprise build with encryption
enterprise = ["production", "encryption"]
# S3 byte-range streaming for cloud ingest (zero egress)
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:chrono", "dep:zstd"]
