[project]
name = "hypertensor-physics"
version = "0.1.0"
description = "Universal physics solver with TT-compressed state evolution"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HyperTensor Team"}
]
keywords = ["physics", "tensor-train", "simulation", "MHD", "molecular-dynamics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
gpu = ["torch>=2.0"]
scipy = ["scipy>=1.7"]
full = ["torch>=2.0", "scipy>=1.7", "matplotlib>=3.5"]
dev = ["pytest>=7.0", "pytest-cov", "black", "ruff"]

[project.urls]
Homepage = "https://github.com/hypertensor/hypertensor-physics"
Documentation = "https://hypertensor-physics.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hypertensor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
