[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwa-engine"
version = "3.0.0"
description = "Partial Wave Analysis Compute Engine — Eq. 5.48 (Badui 2020) with Gram-accelerated likelihood"
readme = "README.md"
license = {text = "Proprietary - Tigantic Holdings LLC"}
requires-python = ">=3.11"
authors = [
    {name = "TiganticLabz / HyperTensor-VM Core Team", email = "dev@tigantic.com"},
]
keywords = [
    "partial-wave-analysis",
    "amplitude-analysis",
    "meson-photoproduction",
    "wigner-d",
    "gram-matrix",
    "extended-likelihood",
    "breit-wigner",
    "hadron-spectroscopy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/tigantic/HyperTensor-VM"
Documentation = "https://github.com/tigantic/HyperTensor-VM/blob/main/paper/PWA_REPLICATION_NOTE.md"
Repository = "https://github.com/tigantic/HyperTensor-VM.git"

[project.scripts]
pwa-engine = "pwa_engine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pwa_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
