[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tci-llm"
version = "1.0.0"
description = "Gradient-Free Language Modeling via Tensor Cross Interpolation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HyperTensor Team"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["tensor-train", "TCI", "language-model", "gradient-free", "QTT"]

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
gpu = [
    "triton>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/hypertensor/tci-llm"
Documentation = "https://github.com/hypertensor/tci-llm#readme"
Repository = "https://github.com/hypertensor/tci-llm"

[tool.setuptools.packages.find]
where = ["."]
include = ["tci_llm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
